# py6502emu

./: .gitignore  LICENSE  README.md
docs/: implement_plan.md  w65c02s_requirements_define.md  w65c02s_software_architecture_design.md  w65c02s_software_detailed_design.md  w65c02s_software_requirements_specification.md
docs/implement/: phase1_implementation_plan.md  phase2_implementation_plan.md  phase3_implementation_plan.md  phase4_implementation_plan.md  phase5_implementation_plan.md
py6502emu/: pyproject.toml
py6502emu/examples/: __init__.py
py6502emu/py6502emu/: __init__.py
py6502emu/py6502emu/core/: __init__.py  clock.py  config.py  device.py  integration.py  interrupt_controller.py  interrupt_types.py  orchestrator.py  scheduler.py  system_config.py  tick_engine.py  types.py
py6502emu/py6502emu/cpu/: __init__.py  addressing.py  decoder.py  flags.py  interrupt_handler.py  registers.py
py6502emu/py6502emu/debug/: __init__.py  breakpoint.py  debugger.py  disassembler.py  inspector.py  serializer.py  source_debug.py  step_controller.py  validator.py
py6502emu/py6502emu/memory/: __init__.py  address_space.py  device_mapper.py  memory_controller.py  mmu.py
py6502emu/tests/: __init__.py  conftest.py
py6502emu/tests/e2e/: test_complete_system.py
py6502emu/tests/integration/: __init__.py  test_phase1_integration.py  test_phase3_integration.py  test_system_integration.py
py6502emu/tests/performance/: test_system_performance.py
py6502emu/tests/unit/: __init__.py  test_config.py  test_device.py  test_system_bus.py
py6502emu/tests/unit/test_core/: __init__.py  test_interrupt_controller.py
py6502emu/tests/unit/test_cpu/: __init__.py  test_addressing.py  test_flags.py  test_registers.py
py6502emu/tests/unit/test_debug/: __init__.py  test_breakpoint.py  test_inspector.py
py6502emu/tests/unit/test_memory/: __init__.py  test_address_space.py  test_device_mapper.py  test_memory_controller.py
